--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slide Show</title>
+    <title>Card Slider</title>
 </head>
 <body>
     <script type="module" src="script.js"></script>
