--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <title>Card Slider</title>
 </head>
 <body>
+    <div class="container">
+        <ul class="carousel">
+            <button class="btn" id="prev">
+                <i class="ri-arrow-left-s-line"></i>
+            </button>
+            <button class="btn" id="next">
+                <i class="ri-arrow-right-s-line"></i>
+            </button>
+            <li class="card">
+                <img src="./images/0.png" alt="card">
+                <h3 class="image-title">Image Title</h3>
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+            </li>
+            <li class="card">
+                <img src="./images/1.png" alt="card">
+                <h3 class="image-title">Image Title</h3>
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+            </li>
+            <li class="card">
+                <img src="./images/2.png" alt="card">
+                <h3 class="image-title">Image Title</h3>
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+            </li>
+            <li class="card">
+                <img src="./images/3.png" alt="card">
+                <h3 class="image-title">Image Title</h3>
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+            </li>
+            <li class="card">
+                <img src="./images/4.png" alt="card">
+                <h3 class="image-title">Image Title</h3>
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+            </li>
+        </ul>
+    </div>
     <script type="module" src="script.js"></script>
 </body>
 </html>
