--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <div class="container">
         <ul class="carousel">
-            <button class="btn" id="prev">
+            <!--<button class="btn" id="prev">
                 <i class="ri-arrow-left-s-line"></i>
             </button>
             <button class="btn" id="next">
                 <i class="ri-arrow-right-s-line"></i>
-            </button>
+            </button>-->
+
             <li class="card">
                 <img src="./images/0.png" alt="card">
                 <h3 class="image-title">Image Title</h3>
