Update style of cards (images and texts)

--- a/index.html
+++ b/index.html
@@ -18,28 +18,38 @@
 
             <li class="card">
                 <img src="./images/0.png" alt="card">
-                <h3 class="image-title">Image Title</h3>
-                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                <div class="text">
+                    <h3 class="image-title">Image Title</h3>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                </div>
             </li>
             <li class="card">
                 <img src="./images/1.png" alt="card">
-                <h3 class="image-title">Image Title</h3>
-                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                <div class="text">
+                    <h3 class="image-title">Image Title</h3>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                </div>
             </li>
             <li class="card">
                 <img src="./images/2.png" alt="card">
-                <h3 class="image-title">Image Title</h3>
-                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                <div class="text">
+                    <h3 class="image-title">Image Title</h3>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                </div>
             </li>
             <li class="card">
                 <img src="./images/3.png" alt="card">
-                <h3 class="image-title">Image Title</h3>
-                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                <div class="text">
+                    <h3 class="image-title">Image Title</h3>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                </div>
             </li>
             <li class="card">
                 <img src="./images/4.png" alt="card">
-                <h3 class="image-title">Image Title</h3>
-                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                <div class="text">
+                    <h3 class="image-title">Image Title</h3>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                </div>
             </li>
         </ul>
     </div>
